--- a/css/style.css
+++ b/css/style.css
@@ -44,10 +44,10 @@
 
 /* Dark theme */
 [theme="dark"] {
-	--background: #282828;
+	--background: #1D2021;
 	--foreground: #858585;
 	--header: #A8A8A8;
-	--card-bg: #ebdab1;
+	--card-bg: #FE8019;
 
 	--weather-fg: #BDBDBD;
 	--weather-bg: var(--card-bg);
