--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@
 	--background: #1D2021;
 	--foreground: #858585;
 	--header: #A8A8A8;
-	--card-bg: #FE8019;
+	--card-bg: #ebdbb2;
 
 	--weather-fg: #BDBDBD;
 	--weather-bg: var(--card-bg);
