--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,10 @@
 
 	--global-font: var(--open-sans);
 
-	--background: #fff;
+	--background: #ebdbb2;
 	--foreground: #7a8c70;
 	--header: #5C6657;
-	--card-bg: #c1ecac;
+	--card-bg: #689d6a;
 
 	--weather-fg: #C5CAE9;
 	--weather-bg: #3c4b96;
