--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
 	--background: #ebdbb2;
 	--foreground: #7a8c70;
 	--header: #5C6657;
-	--card-bg: #689d6a;
+	--card-bg: #8ec07c;
 
 	--weather-fg: #C5CAE9;
 	--weather-bg: #3c4b96;
