--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 
 	--global-font: var(--open-sans);
 
-	--background: #ebdbb2;
+	--background: #fbf17c;
 	--foreground: #7a8c70;
 	--header: #5C6657;
 	--card-bg: #8ec07c;
